--- a/wiki/UncertaintyQuant.wiki
+++ b/wiki/UncertaintyQuant.wiki
@@ -1,4 +1,4 @@
-#summary Effects of direction
+#summary Uncertainties
 #sidebar TableOfContents
 
 = Exercise 3.11: =
@@ -119,7 +119,7 @@ i <- 1
 for (scen in futures) {
 	name <- paste("C:/analogues/results/3.11.ccafs.",scen,".asc",sep="")
 	writeRaster(results[[i]][[1]],name,format="ascii")
-i <- i+1
+    i <- i+1
 }
 }}}
 
@@ -286,7 +286,7 @@ This would plot the scenario number 10, in this case corresponding to the GCM "g
 i <- 1
 for (scen in futures) {
 	name <- paste("C:/analogues/results/3.11.hal.",scen,".asc",sep="")
-	writeRaster(results[[i]][[1]],name,format="ascii")
+	writeRaster(results[[i]][[1]],name,format='ascii')
 	i <- i+1
 }
 }}}
@@ -326,7 +326,7 @@ In the first part of this for loop and object named *`rs`* is created from each 
 {{{
 writeRaster(out,
             "C:/analogues/results/3.11.hal.agreement.asc",
-            format=’ascii’)
+            format='ascii')
 plot(out,col=c("grey",rev(heat.colors(24))))
 }}}
 
